Force 64bit stuff

--- a/WebFormsSdkTest/Properties/launchSettings.json
+++ b/WebFormsSdkTest/Properties/launchSettings.json
@@ -4,13 +4,13 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:42591",
-      "sslPort": 44363
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "use64Bit": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
