--- a/WebFormsSdkTest/Web.config
+++ b/WebFormsSdkTest/Web.config
@@ -44,7 +44,7 @@
   </runtime>
   <system.web.extensions>
     <scripting>
-      <scriptResourceHandler enableCompression="true" enableCaching="true" />
+      <!--<scriptResourceHandler enableCompression="true" enableCaching="true" />-->
       <webServices>
         <jsonSerialization maxJsonLength="50000000" />
       </webServices>
