--- a/WebFormsSdkTest/WebFormsSdkTest.csproj
+++ b/WebFormsSdkTest/WebFormsSdkTest.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="MSBuild.SDK.SystemWeb/4.0.93">
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
-		<PlatformTarget>x64</PlatformTarget>
-	</PropertyGroup>
+    <TargetPlatform>x64</TargetPlatform>
+    <Platforms>x64</Platforms>
+    <Platform>x64</Platform>
+    <!-- Required for publish -->
+  </PropertyGroup>
 	<PropertyGroup>
 		<GeneratedBindingRedirectsAction>Overwrite</GeneratedBindingRedirectsAction>
 	</PropertyGroup>
